-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.6.0
-
None
-
2.4/2.5 clients, master servers (from last week)
-
3
-
16471
2.4 and 2.5 clients receive -524, which is ENOTSUPP, when trying to create remote (NOT striped) directories on current master.
Centclient19 is running 2.5.0, the servers are running reasonably current master:
[root@centclient19 test]# lfs mkdir -i 1 test
error on LL_IOC_LMV_SETSTRIPE 'test' (3): Unknown error 524
error: mkdir: create stripe dir 'test' failed
Attached is the log from the MDS responsible for returning the error and the log from the client receiving it. (centss02 is the server, centclient19 is the client)